--- a/html/mainpage.html
+++ b/html/mainpage.html
@@ -63,5 +63,55 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="wallpaper">
+        <div class="slider">
+          <input type="radio" name="slide" id="slide1" checked />
+          <input type="radio" name="slide" id="slide2" />
+          <input type="radio" name="slide" id="slide3" />
+
+          <ul id="imgholder" class="imgs">
+            <li>
+              <div>
+                <img src="../img/wallpaper/airplane_sunset.png" />
+              </div>
+              <div class="catchphrase">
+                <p>남는건 사진밖에 없어요.</p>
+                <strong class="MEMORAVEL">MEMORAVEL </strong>으로 여행계획을 세우고</strong>
+                <p>잊히지 않을 기억을 남겨 보세요.</p>
+                <button type="button" class="btn btn-dark">시작하기</button>
+              </div>
+            </li>
+            <li>
+              <div>
+                <img src="../img/wallpaper/toy.png" />
+              </div>
+              <div class="catchphrase">
+                <p>이웃들의 <strong class="MEMORAVEL">MEMORY</strong>를 들여다 보고</p>
+                <p>다음 여행에 대한 힌트를 얻으세요.</p>
+                <button type="button" class="btn btn-dark">시작하기</button>
+              </div>
+              
+            </li>
+            <li>
+              <div>
+                <img src="../img/wallpaper/4k.png" />
+              </div>
+              <div class="catchphrase">
+                <p>나의 <strong class="MEMORAVEL">MEMORY</strong>를 이웃들과 공유하고 </p>
+                <p>instagram에 게시하세요.</p>
+                <button type="button" class="btn btn-dark">시작하기</button>
+              </div>
+            </li>
+          </ul>
+          <div class="bullets">
+            <label for="slide1">&nbsp;</label>
+            <label for="slide2">&nbsp;</label>
+            <label for="slide3">&nbsp;</label>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
