--- a/html/mainpage.html
+++ b/html/mainpage.html
@@ -12,6 +12,9 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- navbar -->
@@ -46,7 +49,9 @@
                 id=""
                 class="navSearchText"
                 placeholder="관광지를 검색해보세요"
+                style="width: 80%"
               />
+              <input type="button" class="navSearchBtn" onclick="alert('클릭!')">
             </div>
           </ul>
           <ul class="navbar-nav ms-auto me-2">
