--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MEMORAVEL</title>
-    <link rel="stylesheet" href="../css/mainpage.css" />
+    <link rel="stylesheet" href="../css/index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,11 +18,58 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
+  <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel" style="margin: 0 auto">
+            로그인
+          </h5>
+        </div>
+        <div class="modal-body member_body">
+          <form action="">
+            <div class="member_login_input">
+              <input type="text" name="username" placeholder="아이디" />
+            </div>
+            <div class="member_login_input">
+              <input type="password" name="password" placeholder="비밀번호" />
+            </div>
+            <div class="member_login_btn">
+              <input
+                class="member_login_btn1"
+                type="submit"
+                id="btn-login"
+                value="로그인"
+              />
+              <input
+                type="button"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+                value="닫기"
+                class="member_login_btn2"
+              />
+            </div>
+            <div class="find_password">
+              <a href="/forgot-password">아이디 또는 비밀번호를 잊으셨나요?</a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <body>
     <!-- navbar -->
     <header
-      class="navbar navbar-expand-md shadow bg-light navbar-light fixed"
+      class="navbar navbar-expand-md shadow bg-light navbar-light fixed-top"
       style="background-color: white !important"
     >
       <div class="container">
@@ -63,7 +110,13 @@
           </ul>
           <ul class="navbar-nav ms-auto me-2">
             <li class="nav-item">
-              <a class="nav-link" href="#">로그인</a>
+              <a
+                class="nav-link"
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+                >로그인</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">회원가입</a>
@@ -229,17 +282,61 @@
                 <option value="">전체</option>
                 <option value="">숙박</option>
                 <option value="">식당</option>
-                <option value="">카페</option>
+                <option value="">쇼핑</option>
               </select>
             </div>
             <button type="submit" class="selectBtn">
-              <img src="../img/pencil.png" alt="" height="20px" />
+              <img src="../img/pencil.png" alt="" height="15px" />
               <span>여행 기록 작성하기</span>
             </button>
           </form>
         </div>
+        <div class="cardshow">
+          <p class="titletext" style="margin-bottom: 40px">추천 여행지</p>
+          <div class="row">
+            <div class="col card1">
+              <p class="trip_title">경주</p>
+            </div>
+            <div class="col card1">
+              <p class="trip_title">경주</p>
+            </div>
+            <div class="col card1">
+              <p class="trip_title">경주</p>
+            </div>
+            <div class="col card1">
+              <p class="trip_title">경주</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-12">
+            <h5>MEMORAVEL</h5>
+            <p class="text-justify">
+              Business registration number: 120-00-12345 <br />
+              hosting services: MEMORAVEL Corporation | Travel Business Report
+              Number: 1234-56789 <br />
+              대전광역시 유성구 덕명동 124
+              <br />
+              대전광역시 유성구 덕명동 124
+            </p>
+          </div>
+        </div>
+        <hr />
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">
+              Copyright &copy; 2022 All Rights Reserved by.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
