--- a/html/mkplan.html
+++ b/html/mkplan.html
@@ -5,11 +5,16 @@
     <title>새로운 여행</title>
     <link rel="stylesheet" href="../css/mkplan.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -79,21 +84,18 @@
           <p class="titletext">
             <b class="MEMORAVEL">여행 기록</b>을 바로 작성해보세요!
           </p>
+          <div class="SelectedDate">
+            <img src="../img/calendar.png" alt="" width="25px" height="25px" />
+            <p class="date">2024년 3월 15일</p>
+          </div>
           <form action="" class="selectoption">
             <div class="selectDest">
-              <img
-                src="../img/map.png"
-                alt=""
-                width="25px"
-                height="25px"
-                style="margin-top: 10px"
-              />
               <select
                 name=""
                 id="dest"
                 style="border: none; margin-left: 10px; color: #545454"
               >
-                <option value="" selected>여행지가 어디었나요?</option>
+                <option value="" selected>여행지</option>
                 <option value="">서울</option>
                 <option value="">경기도</option>
                 <option value="">강원도</option>
@@ -103,67 +105,213 @@
                 <option value="">제주도</option>
               </select>
             </div>
-            <div class="selectDate">
-              <img
-                src="../img/calendar.png"
-                alt=""
-                width="25px"
-                height="25px"
-                style="margin-top: 10px"
-              />
-              <input
-                type="text"
-                placeholder="여행일 선택"
-                onfocus="(this.type='date')"
-                onblur="(this.type='text')"
-                style="border: none; margin-left: 10px; color: #545454"
-              />
-            </div>
             <div class="selectCategory">
-              <img
-                src="../img/destination.png"
-                alt=""
-                width="25px"
-                height="25px"
-                style="margin-top: 10px"
-              />
               <select
                 name=""
                 id="category"
                 style="border: none; margin-left: 10px; color: #545454"
               >
-                <option value="" selected>관광지 타입 선택</option>
+                <option value="" selected>관광지 타입</option>
                 <option value="">전체</option>
                 <option value="">숙박</option>
                 <option value="">식당</option>
-                <option value="">카페</option>
+                <option value="">쇼핑</option>
               </select>
             </div>
-            <button type="submit" class="selectBtn" onclick="GetList()">
-              <img src="../img/pencil.png" alt="" height="20px" />
-              <span>여행 기록 작성하기</span>
-            </button>
+            <div class="selectSearch">
+              <input
+                type="text"
+                name=""
+                id="text"
+                class="selectSearchText"
+                placeholder="관광지를 검색해보세요"
+              />
+            </div>
+            <input
+              type="submit"
+              class="selectBtn"
+              onclick="alert('클릭!')"
+              value="검색"
+            />
           </form>
         </div>
       </section>
-      <section class="kakaomap">
-        <div id="map" style="width: 1000px; height: 600px"></div>
-        <script
-          type="text/javascript"
-          src="//dapi.kakao.com/v2/maps/sdk.js?appkey=29ddff9836b54bb228eadc5857ca78a3"
-        ></script>
-        <script>
-          var container = document.getElementById("map");
-          var options = {
-            center: new kakao.maps.LatLng(33.450701, 126.570667),
-            level: 3,
-          };
+      <section class="container">
+        <div class="kakaomap">
+          <div id="map" style="width: 600px; height: 500px"></div>
+          <script
+            type="text/javascript"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=29ddff9836b54bb228eadc5857ca78a3"
+          ></script>
+          <script>
+            var container = document.getElementById("map");
+            var options = {
+              center: new kakao.maps.LatLng(33.450701, 126.570667),
+              level: 3,
+            };
 
-          var map = new kakao.maps.Map(container, options);
-        </script>
+            var map = new kakao.maps.Map(container, options);
+          </script>
+          <div class="list">
+            <div class="trip-info">
+              <div class="trip-info-line">
+                <div class="trip-info-div">
+                  <img
+                    src="../img/wallpaper/phone.png"
+                    alt=""
+                    width="100px"
+                    height="100px"
+                  />
+                  <div class="trip-info-text">
+                    <h5>해운대</h5>
+                    <p>해운대가 멋집니다</p>
+                  </div>
+                </div>
+                <button class="trip-info-btn">
+                  <img
+                    src="../img/arrow-right.png"
+                    alt=""
+                    width="50px"
+                    height="50px"
+                  />
+                </button>
+              </div>
+              <div class="trip-info-line">
+                <div class="trip-info-div">
+                  <img
+                    src="../img/wallpaper/phone.png"
+                    alt=""
+                    width="100px"
+                    height="100px"
+                  />
+                  <div class="trip-info-text">
+                    <h5>해운대</h5>
+                    <p>해운대가 멋집니다</p>
+                  </div>
+                </div>
+                <button class="trip-info-btn">
+                  <img
+                    src="../img/arrow-right.png"
+                    alt=""
+                    width="50px"
+                    height="50px"
+                  />
+                </button>
+              </div>
+              <div class="trip-info-line">
+                <div class="trip-info-div">
+                  <img
+                    src="../img/wallpaper/phone.png"
+                    alt=""
+                    width="100px"
+                    height="100px"
+                  />
+                  <div class="trip-info-text">
+                    <h5>해운대</h5>
+                    <p>해운대가 멋집니다</p>
+                  </div>
+                </div>
+                <button class="trip-info-btn">
+                  <img
+                    src="../img/arrow-right.png"
+                    alt=""
+                    width="50px"
+                    height="50px"
+                  />
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseOne"
+                aria-expanded="false"
+                aria-controls="flush-collapseOne"
+              >
+                해운대
+              </button>
+            </h2>
+            <div
+              id="flush-collapseOne"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <input type="text" name="" id="" class="wirtein" />
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#data2"
+                aria-expanded="false"
+                aria-controls="data2"
+              >
+                해운대
+              </button>
+            </h2>
+            <div
+              id="data2"
+              class="accordion-collapse collapse"
+              aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlushExample"
+            >
+              <div class="accordion-body">
+                <input type="text" name="" id="" class="wirtein" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="submitWrite">
+          <button
+            type="submit"
+            class="selectBtn"
+            onclick="alert('저장되었습니다.')"
+          >
+            <img src="../img/pencil.png" alt="" height="15px" />
+            <span>여행 기록 작성하기</span>
+          </button>
+        </div>
       </section>
-      <section class="list"></section>
     </main>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-12">
+            <h5>MEMORAVEL</h5>
+            <p class="text-justify">
+              Business registration number: 120-00-12345 <br />
+              hosting services: MEMORAVEL Corporation | Travel Business Report
+              Number: 1234-56789 <br />
+              대전광역시 유성구 덕명동 124
+              <br />
+              대전광역시 유성구 덕명동 124
+            </p>
+          </div>
+        </div>
+        <hr />
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">
+              Copyright &copy; 2022 All Rights Reserved by.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="../js/public_data_api.js"></script>
   </body>
 </html>
