--- a/html/mkplan.html
+++ b/html/mkplan.html
@@ -29,7 +29,7 @@
       style="background-color: white !important"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../html/index.html">
           <img
             src="../img/logo.png"
             alt="Logo"
@@ -57,11 +57,7 @@
                 placeholder="관광지를 검색해보세요"
                 style="width: 80%"
               />
-              <input
-                type="button"
-                class="navSearchBtn"
-                onclick="alert('클릭!')"
-              />
+              <input type="button" class="navSearchBtn" />
             </div>
           </ul>
           <ul class="navbar-nav ms-auto me-2">
@@ -69,10 +65,10 @@
               <a class="nav-link" href="#">로그인</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">회원가입</a>
+              <a class="nav-link" href="../html/login.html">회원가입</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">마이페이지</a>
+              <a class="nav-link" href="../html/mypage.html">마이페이지</a>
             </li>
           </ul>
         </div>
@@ -127,12 +123,7 @@
                 placeholder="관광지를 검색해보세요"
               />
             </div>
-            <input
-              type="submit"
-              class="selectBtn"
-              
-              value="검색"
-            />
+            <input type="submit" class="selectBtn" value="검색" />
           </form>
         </div>
       </section>
@@ -156,69 +147,10 @@
             <div class="trip-info">
               <div class="trip-info-line">
                 <div class="trip-info-div">
-                  <img
-                    src="../img/wallpaper/phone.png"
-                    alt=""
-                    width="100px"
-                    height="100px"
-                  />
                   <div class="trip-info-text">
-                    <h5>해운대</h5>
-                    <p>해운대가 멋집니다</p>
+                    <p>관광지를 검색해보세요!</p>
                   </div>
                 </div>
-                <button class="trip-info-btn">
-                  <img
-                    src="../img/arrow-right.png"
-                    alt=""
-                    width="50px"
-                    height="50px"
-                  />
-                </button>
-              </div>
-              <div class="trip-info-line">
-                <div class="trip-info-div">
-                  <img
-                    src="../img/wallpaper/phone.png"
-                    alt=""
-                    width="100px"
-                    height="100px"
-                  />
-                  <div class="trip-info-text">
-                    <h5>해운대</h5>
-                    <p>해운대가 멋집니다</p>
-                  </div>
-                </div>
-                <button class="trip-info-btn">
-                  <img
-                    src="../img/arrow-right.png"
-                    alt=""
-                    width="50px"
-                    height="50px"
-                  />
-                </button>
-              </div>
-              <div class="trip-info-line">
-                <div class="trip-info-div">
-                  <img
-                    src="../img/wallpaper/phone.png"
-                    alt=""
-                    width="100px"
-                    height="100px"
-                  />
-                  <div class="trip-info-text">
-                    <h5>해운대</h5>
-                    <p>해운대가 멋집니다</p>
-                  </div>
-                </div>
-                <button class="trip-info-btn">
-                  <img
-                    src="../img/arrow-right.png"
-                    alt=""
-                    width="50px"
-                    height="50px"
-                  />
-                </button>
               </div>
             </div>
           </div>
@@ -312,6 +244,6 @@
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="../js/public_data_api.js"></script>    
+    <script type="text/javascript" src="../js/public_data_api.js"></script>
   </body>
 </html>
