--- a/html/mypage.html
+++ b/html/mypage.html
@@ -21,51 +21,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <div
-    class="modal fade"
-    id="exampleModal"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel" style="margin: 0 auto">
-            로그인
-          </h5>
-        </div>
-        <div class="modal-body member_body">
-          <form action="">
-            <div class="member_login_input">
-              <input type="text" name="username" placeholder="아이디" />
-            </div>
-            <div class="member_login_input">
-              <input type="password" name="password" placeholder="비밀번호" />
-            </div>
-            <div class="member_login_btn">
-              <input
-                class="member_login_btn1"
-                type="submit"
-                id="btn-login"
-                value="로그인"
-              />
-              <input
-                type="button"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-                value="닫기"
-                class="member_login_btn2"
-              />
-            </div>
-            <div class="find_password">
-              <a href="/forgot-password">아이디 또는 비밀번호를 잊으셨나요?</a>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
   <body>
     <!-- navbar -->
     <header
@@ -73,7 +28,7 @@
       style="background-color: white !important"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../html/index.html">
           <img
             src="../img/logo.png"
             alt="Logo"
@@ -101,11 +56,7 @@
                 placeholder="관광지를 검색해보세요"
                 style="width: 80%"
               />
-              <input
-                type="button"
-                class="navSearchBtn"
-                onclick="alert('클릭!')"
-              />
+              <input type="button" class="navSearchBtn" />
             </div>
           </ul>
           <ul class="navbar-nav ms-auto me-2">
@@ -119,10 +70,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">회원가입</a>
+              <a class="nav-link" href="../html/login.html">회원가입</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">마이페이지</a>
+              <a class="nav-link" href="../html/mypage.html">마이페이지</a>
             </li>
           </ul>
         </div>
