--- a/html/index.html
+++ b/html/index.html
@@ -304,9 +304,9 @@
               </select>
             </div>
             <button
-              type="submit"
+              type="button"
               class="selectBtn"
-              onClick="location.href='../html/mkplan.html'"
+              onClick="location.href='mkplan.html'"
             >
               <img src="../img/pencil.png" alt="" height="15px" />
               <span>여행 기록 작성하기</span>
