--- a/html/mkplan.html
+++ b/html/mkplan.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>새로운 여행</title>
+    <title>MEMORAVEL</title>
     <link rel="stylesheet" href="../css/mkplan.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -166,7 +166,7 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseOne"
               >
-                해운대
+                금수복국(해운대본점)
               </button>
             </h2>
             <div
@@ -190,7 +190,7 @@
                 aria-expanded="false"
                 aria-controls="data2"
               >
-                해운대
+                베니키아 프리미어 해운대 호텔
               </button>
             </h2>
             <div
