마이페이지 수정

--- a/html/mypage.html
+++ b/html/mypage.html
@@ -83,6 +83,10 @@
       <section class="container">
         <div class="writedown">
           <p class="titletext">나의 <b class="MEMORAVEL">MEMORAVLE</b></p>
+          <div class="SelectedDate">
+            <img src="../img/calendar.png" alt="" width="25px" height="25px" />
+            <p class="date">2024년 3월 15일</p>
+          </div>
           <div class="trip-info">
             <div class="trip-info-line">
               <div class="trip-info-div">
@@ -93,8 +97,31 @@
                   height="100px"
                 />
                 <div class="trip-info-text">
-                  <h5>해운대</h5>
-                  <p>해운대가 멋집니다</p>
+                  <h5>금수복국(해운대본점)</h5>
+                  <p>정말 맛있었어요</p>
+                </div>
+              </div>
+              <button class="trip-info-btn">
+                <img
+                  src="../img/arrow-right.png"
+                  alt=""
+                  width="50px"
+                  height="50px"
+                />
+              </button>
+            </div>
+          </div>
+            <div class="trip-info-line">
+              <div class="trip-info-div">
+                <img
+                  src="../img/wallpaper/phone.png"
+                  alt=""
+                  width="100px"
+                  height="100px"
+                />
+                <div class="trip-info-text">
+                  <h5>니키아 프리미어 해운대 호텔</h5>
+                  <p>호텔이 정말 좋았어요</p>
                 </div>
               </div>
               <button class="trip-info-btn">
