--- a/html/index.html
+++ b/html/index.html
@@ -318,15 +318,43 @@
           <div class="row">
             <div class="col card1">
               <p class="trip_title">경주</p>
+              <button
+                type="button"
+                class="recommendBtn"
+                onClick="location.href='../html/triplist.html'"
+              >
+                보러가기
+              </button>
             </div>
             <div class="col card1">
               <p class="trip_title">대전</p>
+              <button
+                type="button"
+                class="recommendBtn"
+                onClick="location.href='../html/triplist.html'"
+              >
+                보러가기
+              </button>
             </div>
             <div class="col card1">
               <p class="trip_title">전주</p>
+              <button
+                type="button"
+                class="recommendBtn"
+                onClick="location.href='../html/triplist.html'"
+              >
+                보러가기
+              </button>
             </div>
             <div class="col card1">
               <p class="trip_title">부산</p>
+              <button
+                type="button"
+                class="recommendBtn"
+                onClick="location.href='../html/triplist.html'"
+              >
+                보러가기
+              </button>
             </div>
           </div>
         </div>
